# retail-price

./: README.md  analysis.ipynb  analysis.py  main.ipynb  main.py  model.pkl  pyproject.toml
data/: best_model.pkl  dt_metadata.pkl  main.ipynb  main.py  model.pkl  model_metadata.pkl  new.py
