[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "csvkit>=2.1.0",
    "eli5>=0.16.0",
    "fastexcel>=0.14.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xlsx2csv>=0.8.4",
]
